--- a/index-2.html
+++ b/index-2.html
@@ -191,10 +191,9 @@ body {
  style="background-color: rgb(255, 255, 255); margin-left: 40px;"><font
  style="color: rgb(0, 0, 0); font-family: Arial;" size="2"
  face="Verdana"><big style="font-weight: normal;"><font
- style="color: rgb(0, 0, 0);"><a target="_blank"
- ><span
+ style="color: rgb(0, 0, 0);"><span
  style="text-decoration: none;">James W. P. Hirschfeld</span></a></font> (University of Sussex , Brighton, UK) <span style="font-weight: bold;"></span><br>
-      <a target="_blank" href="http://www.sussex.ac.uk/profiles/323136/"> <span
+       <span
  style="text-decoration: none;">Fatma Karaoglu</span></a> (University
 of Sussex, Brighton, UK)<br>
       <a target="_blank" href="http://www.uni-essen.de/~mat300/"> </big></font><br>
