--- a/program.html
+++ b/program.html
@@ -103,7 +103,7 @@ body {
       </td>
 	    <td style="background-color: rgb(255, 255, 255);" width="10000">
       <p style="background-color: rgb(255, 255, 255);" align="center"><a
- href="http://www.gursey.gov.tr/"><img alt="Tubitak"
+ href="http://www.gursey.gov.tr/"><img alt="IMA"
  title="IMA" src="ima_logo_new.jpg"
  style="border: 0px solid ; width: 107px; height: 112px;"></a><br>
       <br>
@@ -186,8 +186,8 @@ body {
  face="Verdana" size="4"><b>School Program</b></font></h4>
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"> </font><big><span
  style="color: rgb(0, 0, 0);" lang="en-us"><font face="Verdana" size="2"><big><b>-
-      <i>Title of the lecture <a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
-NOTES</big></a></i></b></big></font></span><br
+      <i>Title of the lecture <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
+NOTES</big></a>--></i></b></big></font></span><br
  style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
