--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -104,7 +104,7 @@ body {
 	  
 	    <td style="background-color: rgb(255, 255, 255);" width="10000">
       <p style="background-color: rgb(255, 255, 255);" align="center"><a
- href="http://www.gursey.gov.tr/"><img alt="Tubitak"
+ href="http://www.ima.org.uk/"><img alt="IMA"
  title="IMA" src="ima_logo_new.jpg"
  style="border: 0px solid ; width: 107px; height: 112px;"></a><br>
       <br>
@@ -174,12 +174,13 @@ body {
       <h3><span style="color: rgb(255, 0, 0);"> </span><br>
       </h3>
       
-      
+      <!--
       <ul>
         <big>Please write your abstract using our template and email both LaTeX and PDF files to 
 		fingeo@sussex.ac.uk by 10th May 2017, if you intend to deliver a 15 minutes talk.<br>
           </big>
       </ul>  
+-->
 <table
  style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
  border="0">
