--- a/venue.html
+++ b/venue.html
@@ -104,7 +104,7 @@ body {
 	  
 	    <td style="background-color: rgb(255, 255, 255);" width="10000">
       <p style="background-color: rgb(255, 255, 255);" align="center"><a
- href="http://www.gursey.gov.tr/"><img alt="Tubitak"
+ href="http://www.ima.org.uk/"><img alt="IMA"
  title="IMA" src="ima_logo_new.jpg"
  style="border: 0px solid ; width: 107px; height: 112px;"></a><br>
       <br>
@@ -173,11 +173,12 @@ body {
       <h3><span style="color: rgb(255, 0, 0);"> </span><br>
       </h3>
       
-      
+      <!--
       <ul>
         <big>Lectures of the summer school will be given in the room 5C11 in Pevensey II at University of Sussex, Brighton, United Kingdom.<br>
           </big>
       </ul>  
+-->
 <table
  style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
  border="0">
