--- a/registration.html
+++ b/registration.html
@@ -158,6 +158,22 @@ body {
     </tr>
   </tbody>
 </table>
+	<span style="font-weight: bold;"></span><br>
+
+<br>
+<hr style="margin-left: auto; margin-right: auto;">
+<table
+ style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
+ border="0">
+  <tbody>
+    <tr>
+      <td style="width: 595px; background-color: rgb(255, 255, 255);"
+ border="0"><span class="Apple-style-span"
+ style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
+ class="Apple-style-span" style="">
+  <hr style="width: 100%; height: 2px;"><br>
+	
+	<!--
 <span style="font-weight: bold;"></span><br>
 
 <br>
@@ -203,6 +219,7 @@ contact<span class="Apple-converted-space">&nbsp;</span></big><a
       <dt style="font-weight: bold;"><br>
       </dt>
       -->
+	      <!--
       </span></span><br class="Apple-interchange-newline">
       <div style="margin-left: 40px;"><br>
       <span lang="en-us"></span></div>
@@ -213,5 +230,5 @@ contact<span class="Apple-converted-space">&nbsp;</span></big><a
 
 
 <hr style="width: 100%; height: 2px;"><br>
-
+-->
 </html>
