--- a/program.html
+++ b/program.html
@@ -201,8 +201,8 @@ Ghent University, Ghent, Belgium</big></font><br
       <span style="color: rgb(0, 0, 0);" lang="en-us"><font
  face="Verdana" size="2"><big><b> </b> </big></font></span><font
  style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
- lang="en-us"> <b>-</b> <b><i>Title of the lecture<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
-NOTES</big></a></i></b></big></font></span><br
+ lang="en-us"> <b>-</b> <b><i>Title of the lecture <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
+NOTES</big></a>--></i></b></big></font></span><br
  style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
@@ -212,8 +212,8 @@ NOTES</big></a></i></b></big></font></span><br
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big> <span
  lang="en-us"></span></big></font><br style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
- lang="en-us"> <b>-</b> <b><i>Title of the lecture <a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
-NOTES</big></a></i></b></big></font></span><br
+ lang="en-us"> <b>-</b> <b><i>Title of the lecture <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
+NOTES</big></a> --> </i></b></big></font></span><br
  style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
