--- a/index-2.html
+++ b/index-2.html
@@ -103,9 +103,10 @@ body {
       </div>
       </td>
 	    <td style="background-color: rgb(255, 255, 255);" width="10000">
-      <p style="background-color: rgb(255, 255, 255);" 
+      <p style="background-color: rgb(255, 255, 255);" align="center"><a
+ href="http://www.ima.org.uk/"><img alt="IMA"
  title="IMA" src="ima_logo_new.jpg"
- style="border: 0px solid ; width: 107px; height: 112px;"><br>
+ style="border: 0px solid ; width: 107px; height: 112px;"></a><br>
       <br>
       <a href="http://www.ima.org.uk//">Institute of Mathematics and Its Applications</a></p>
       <p align="center"> </p>
