--- a/index-2.html
+++ b/index-2.html
@@ -215,7 +215,7 @@ body {
  style="color: rgb(0, 0, 0);"><b style="font-family: Arial;"><font
  size="2"><big> </big></font> </b><span style="font-family: Arial;"><font
  size="2"><big> <a target="_blank"
- href="http://www-circa.mcs.st-andrews.ac.uk/~pjc/"> <span
+ href="https://cage.ugent.be/~jat/"> <span
  style="text-decoration: none;">Jef Thas</span></a></big></font></span><span
  style="font-family: Arial;"><font size="2"><big>, </big></font> </span><font
  style="font-family: Arial;" size="2" face="Verdana"><big>Ghent University, Ghent, Belgium</big></font></big><br style="color: rgb(0, 0, 0);">
