--- a/index-2.html
+++ b/index-2.html
@@ -187,7 +187,18 @@ body {
       <h3
  style="background-color: rgb(255, 255, 255); font-family: Arial; margin-left: 40px;"><big
  style="font-weight: normal;">Organizing Committee</big></h3>
-      
+      <h3
+ style="background-color: rgb(255, 255, 255); margin-left: 40px;"><font
+ style="color: rgb(0, 0, 0); font-family: Arial;" size="2"
+ face="Verdana"><big style="font-weight: normal;"><font
+ style="color: rgb(0, 0, 0);"> <!-- <a target="_blank"
+ href="http://www.sussex.ac.uk/profiles/1242/"> --> <span
+ style="text-decoration: none;">James W. P. Hirschfeld</span></a></font> (University of Sussex , Brighton, UK) <span style="font-weight: bold;"></span><br>
+     <!-- <a target="_blank" href="http://www.sussex.ac.uk/profiles/323136/"> --> <span
+ style="text-decoration: none;">Fatma Karaoglu</span></a> (University
+of Sussex, Brighton, UK)<br>
+   </big></font><br>
+      </h3>
       
       </td>
       <td width="350"><a href="figs/vapur.html" target="_blank"><img
