--- a/index.html
+++ b/index.html
@@ -273,6 +273,20 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
 </table>
 
 
+
+	<dt><span style="font-weight: bold;">Contact<span
+ class="Apple-converted-space">&nbsp;</span></span></dt>
+      <dt>Please email to fingeo@sussex.ac.uk for all question about the school. <br>
+      </dt>
+      </span></span><br class="Apple-interchange-newline">
+      <div style="margin-left: 40px;"><br>
+      <span lang="en-us"></span></div>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
 <hr style="width: 100%; height: 2px;"><br>
 
 </html>
