--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
   </tbody>
 </table>
 <hr style="width: 100%; height: 2px;"><br>
-<table
- style="width: 955px; height:100px; text-align: left; margin-left: auto; margin-right: auto; background-color: rgb(255, 255, 255);"
+<!--<table
+ style="width: 955px; height: 234px; text-align: left; margin-left: auto; margin-right: auto; background-color: rgb(255, 255, 255);"
  border="0">
- <tbody>
+ <tbody> -->
     <tr>
       
       
