--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
     </tr>
   </tbody>
 </table>
-<hr style="width: 100%; height: 2px;"><br>
+<!--<hr style="width: 100%; height: 2px;"><br> -->
 <!--<table
  style="width: 955px; height: 234px; text-align: left; margin-left: auto; margin-right: auto; background-color: rgb(255, 255, 255);"
  border="0">
