--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
  style="font-family: Arial;"> <a target="_blank"
  href="http://www.math.colostate.edu/~betten/"> <span
  style="text-decoration: none;">Anton Betten</span></a>,</span><span
- style="font-family: Arial;">  Colorado State University, Fort Collins, USA </span> <span
- style="font-family: Arial;"></span></big></font><br
+ style="font-family: Arial;">  Colorado State University, Fort Collins, USA </span> 
+	 <span style="font-family: Arial;"></span></big></font><br
  style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" size="2" face="Verdana"><big><span
  style="font-family: Arial;"> </big></font><br>
