--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
       
 <dt><span style="font-weight: bold;">Contact<span
  class="Apple-converted-space">&nbsp;</span></span></dt>
-      <dt>Please email to fingeo@sussex.ac.uk for all question about the school. <br>
+      <dt>Please email to fk74@sussex.ac.uk for all question about the school. <br>
       </dt>
       </span></span><br class="Apple-interchange-newline">
       <div style="margin-left: 40px;"><br>
