--- a/index-2.html
+++ b/index-2.html
@@ -253,7 +253,7 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
  href="http://www.math.colostate.edu/~betten/"> <span
  style="text-decoration: none;">Anton Betten</span></a>,</span><span
  style="font-family: Arial;">  Colorado State University, Fort Collins, USA </span><span
- style="font-family: Arial;"></span></big></font><br
+ style="font-family: Arial;"></span> <span style="font-family: Arial;"></span></big></font><br
  style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" size="2" face="Verdana"><big><span
  style="font-family: Arial;"> </big></font><br>
@@ -268,7 +268,20 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
 <table
  style="width: 955px; height: 234px; text-align: left; margin-left: auto; margin-right: auto; background-color: rgb(255, 255, 255);"
  border="0">
- 
+ <tbody>
+    <tr>
+      
+      
+<dt><span style="font-weight: bold;">Contact<span
+ class="Apple-converted-space">&nbsp;</span></span></dt>
+      <dt>Please email to fk74@sussex.ac.uk for all question about the school. <br>
+      </dt>
+      </span></span><br class="Apple-interchange-newline">
+      <div style="margin-left: 40px;"><br>
+      <span lang="en-us"></span></div>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 
