--- a/program.html
+++ b/program.html
@@ -359,15 +359,15 @@ NOTES</big></a> --> </i></b></big></font></span><br
           <tr valign="bottom">
             <td align="center" valign="middle" width="81"><small><font
  size="3"><small><b>14:00-15:00</b></small></font></small></td>
-            <td align="center" bgcolor="#ff9900" valign="middle"
+            <td align="center" bgcolor="#F79F81" valign="middle"
  width="104"><small><font size="6"><small>Ball</small></font></small></td>
- <td align="center" bgcolor="#ff9900" valign="middle"
+ <td align="center" bgcolor="#F79F81" valign="middle"
  width="104"><small><font size="6"><small>Ball</small></font></small></td>
- <td align="center" bgcolor="#ff9900" valign="middle"
+ <td align="center" bgcolor="#F79F81" valign="middle"
  width="104"><small><font size="6"><small>Ball</small></font></small></td>
- <td align="center" bgcolor="#ff9900" valign="middle"
+ <td align="center" bgcolor="#F79F81" valign="middle"
  width="104"><small><font size="6"><small>Ball</small></font></small></td>
- <td align="center" bgcolor="#ff9900" valign="middle"
+ <td align="center" bgcolor="#F79F81" valign="middle"
  width="104"><small><font size="6"><small>Ball</small></font></small></td>
             
             
