--- a/index-2.html
+++ b/index-2.html
@@ -244,7 +244,7 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
  style="font-family: Arial;"> <a target="_blank"
  href="https://mat-web.upc.edu/people/simeon.michael.ball/"> <span
  style="text-decoration: none;">Simeon Ball</span></a>,</span><span
- style="font-family: Arial;">  Universitat Politècnica de Catalunya, Barcelona, Espanya </span><span
+ style="font-family: Arial;">  Universitat Politècnica de Catalunya, Barcelona, Spain </span><span
  style="font-family: Arial;"></span></big></font><br
  style="color: rgb(0, 0, 0);">
  
@@ -274,7 +274,7 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
       
 <dt><span style="font-weight: bold;">Contact<span
  class="Apple-converted-space">&nbsp;</span></span></dt>
-      <dt>Please email to fk74@sussex.ac.uk for all question about the school. <br>
+      <dt>Please email to fk74@sussex.ac.uk for all questions about the school. <br>
       </dt>
       </span></span><br class="Apple-interchange-newline">
       <div style="margin-left: 40px;"><br>
