--- a/index-2.html
+++ b/index-2.html
@@ -186,7 +186,7 @@ body {
  style="width: 595px; background-color: rgb(255, 255, 255);">
       <h3
  style="background-color: rgb(255, 255, 255); font-family: Arial; margin-left: 40px;"><big
- style="font-weight: normal;">Organizing Committee</big></h3>
+ style="font-weight: normal;">Organising Committee</big></h3>
       <h3
  style="background-color: rgb(255, 255, 255); margin-left: 40px;"><font
  style="color: rgb(0, 0, 0); font-family: Arial;" size="2"
