--- a/program.html
+++ b/program.html
@@ -218,7 +218,7 @@ NOTES</big></a> --> </i></b></big></font></span><br
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
  href="https://mat-web.upc.edu/people/simeon.michael.ball/"> <span
- style="text-decoration: none;">Simeon Ball</span></a>,</b> Universitat Politècnica de Catalunya, Barcelona, Espanya </big></font><br style="color: rgb(0, 0, 0);">
+ style="text-decoration: none;">Simeon Ball</span></a>,</b> Universitat Politècnica de Catalunya, Barcelona, Spain </big></font><br style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big> <span
  lang="en-us"></span></big></font><br style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
