--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@ of Sussex, Brighton, UK)<br>
  border="0">
   <tbody>
     <tr>
+	    <td width="350"><a href="figs/vapur.html" target="_blank"><img
+ alt="Finite Geometry" title="Fingeo" src="c.png"
+ style="border: 0px solid ; width: 405px; height: 303px;"></a><br>
+      </td>
       <td border="0"
  style="width: 595px; background-color: rgb(255, 255, 255);">
       <div style="margin-left: 40px;">
