--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ body {
     <tr>
       <td style="background-color: rgb(255, 255, 255);" width="87">
       <p align="center"><a
- href="../eng/index_en.html" target="_blank"><img
- alt="University of Sussex Mathematics Department" title="School of Mathematical Science"
+ href="http://www.sussex.ac.uk/study/phd/doctoral" target="_blank"><img
+ alt="University of Sussex Doctoral School" title="Doctoral School"
  src="ds-flint.jpg"
  style="border: 0px solid ; width: 261px; height: 150px;"></a><br>
       </p>
