--- a/registration.html
+++ b/registration.html
@@ -109,7 +109,7 @@ body {
  title="IMA" src="ima_logo_new.jpg"
  style="border: 0px solid ; width: 107px; height: 112px;"></a><br>
       <br>
-      <a href="http://www.ima.org.uk//">Institute of Mathematics and Its Applications</a></p>
+     <!-- <a href="http://www.ima.org.uk//">Institute of Mathematics and Its Applications</a> --></p>
       <p align="center"> </p>
       </td>
     </tr>
