--- a/participants.html
+++ b/participants.html
@@ -81,7 +81,7 @@ body {
     <tr>
       <td style="background-color: rgb(255, 255, 255);" width="87">
       <p align="center"><a
- href="../eng/index_en.html" target="_blank"><img
+ href="http://www.sussex.ac.uk/study/phd/doctoral" target="_blank"><img
  alt="University of Sussex Mathematics Department" title="School of Mathematical Science"
  src="ds-flint.jpg"
  style="border: 0px solid ; width: 261px; height: 150px;"></a><br>
