--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ of Sussex, Brighton, UK)<br>
     
       
       </td>
-      <td width="350"><a href="figs/vapur.html" target="_blank"><img
+      <td width="350"><a href="http://brightonmuseums.org.uk/royalpavilion/" target="_blank"><img
  alt="Royal Pavilion" title="Royal Pavilion" src="a.jpg"
  style="border: 0px solid ; width: 405px; height: 303px;"></a><br>
       </td>
