--- a/registration.html
+++ b/registration.html
@@ -171,6 +171,34 @@ body {
  border="0"><span class="Apple-style-span"
  style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
  class="Apple-style-span" style="">
+	       <h3><span style="color: rgb(255, 0, 0);">The deadline for registration is Friday 12 May, 2017.</span><br>
+      </h3>
+     
+      <h3>Please fill in the <a
+ href="stt">application
+form.</a> <span class="Apple-converted-space"> </span></h3>
+      
+      <ul>
+        <li><big>The registration fee is 100 pounds. (Please note that registration fee does not cover accommodation.)</big></li>
+      </ul>
+      <ul>
+        <li><big>The registration fee includes welcome reception, breakfast, lunch, dinner, and coffee break.<br>
+          </big></li>
+      </ul>
+      <ul>
+        <li><big> To complete your registration you need to make your payments (registration fee + accommodation).</big></li>
+      </ul>
+<h3> More information about payment will be available soon. </h3>
+
+<table
+ style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
+ border="0">
+  <tbody>
+    <tr>
+      <td style="width: 595px; background-color: rgb(255, 255, 255);"
+ border="0"><span class="Apple-style-span"
+ style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
+ class="Apple-style-span" style="">
   <hr style="width: 100%; height: 2px;"><br>
 	
 	<!--
