--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -173,6 +173,32 @@ body {
  class="Apple-style-span" style="">
       <h3><span style="color: rgb(255, 0, 0);"> </span><br>
       </h3>
+	<td style="width: 595px; background-color: rgb(255, 255, 255);"
+ border="0"><font style="color: rgb(0, 0, 0);" color="#990000"
+ face="Verdana" size="4"><b>Call for Short Talk</b></font><b
+ style="color: rgb(0, 0, 0);"><span lang="en-us"></span></b><font
+ style="color: rgb(0, 0, 0);" face="Verdana" size="2"><br>
+      <br>
+      <br>
+Research students are invited to give a 15 minute talk on their work. 
+Please write your abstract using our template and email both LaTeX and PDF files to fk74@sussex.ac.uk. 
+Please name the files and emails as surname_firstname_abstract. 
+
+      <br> </br> </br> </br>
+	  
+	  <b style="color: rgb(0, 0, 0);"><font face="Verdana">Abstract template: <br>
+	  <a href="kja">
+                <img src="http://147.162.25.187/tex.png" alt="TeX document icon" />
+                template2016.tex
+              </a>
+	  
+      </font> 
+	  
+	  <br> </br> </br> </br>
+	  <h3><span style="color: rgb(255, 0, 0);">Deadline
+for
+sending us the abstract of talks: Monday 15 of May, 2017.</span><br>
+      </h3>
       
       <!--
       <ul>
