--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -182,7 +182,7 @@ body {
       <br>
 Research students are invited to give a 15 minute talk on their work. 
 Please write your abstract using our template and email both LaTeX and PDF files to fk74@sussex.ac.uk. 
-Please name the files and emails as <b>Surname_Firstname_Abstract<b>. 
+Please name the files and emails as <b>Surname_Firstname_Abstract</b>. 
 
       <br> </br> </br> </br>
 	  
