--- a/try.html
+++ b/try.html
@@ -170,6 +170,14 @@ body {
  border="0"><span class="Apple-style-span"
  style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
  class="Apple-style-span" style="">
+	      <h3><span style="color: rgb(0, 0, 0);">There will be a drink reception for all participants on Monday 26 June and a dinner on Wednesday 28 June.</span><br>
+      </h3>
+	 
+	 <u1><big>The dinner will be at indivuduals' own expense (40 pounds per person).<br>
+      </big></u1> 
+	  <u1><big>The places of the reception and dinner will be announced here in the beginning of June.<br>
+      </big></u1>
+<br><br></br></br>
   <hr style="width: 100%; height: 2px;"><br>
 	<!--
 <span style="font-weight: bold;"></span><br>
