--- a/participants.html
+++ b/participants.html
@@ -170,5 +170,8 @@ body {
  border="0"><span class="Apple-style-span"
  style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
  class="Apple-style-span" style="">
+	      <h3><span style="color: rgb(0, 0, 0);">The number of participants is expected to be approximately 40.</span><br>
+      </h3>
+	  <br></br> <br></br> <br></br>
   <hr style="width: 100%; height: 2px;"><br>
 </html>
