--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -185,6 +185,43 @@ body {
  border="0"><span class="Apple-style-span"
  style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
  class="Apple-style-span" style="">
+	      <h3><span style="color: rgb(255, 0, 0);"> </span><br>
+      </h3>
+      
+      <!--
+      <ul>
+        <big>Please write your abstract using our template and email both LaTeX and PDF files to 
+		fingeo@sussex.ac.uk by 10th May 2017, if you intend to deliver a 15 minutes talk.<br>
+          </big>
+      </ul>  
+-->
+
+<td style="width: 595px; background-color: rgb(255, 255, 255);"
+ border="0"><font style="color: rgb(255, 0, 0);" color="#990000"
+ face="Verdana" size="4"><b>University of Sussex Campus</b></font><b
+ style="color: rgb(0, 0, 0);"><span lang="en-us"></span></b><font
+ style="color: rgb(0, 0, 0);" face="Verdana" size="2"><br>
+      <br>
+      <br> 
+<br>
+<u1><big>
+Full details about accommodation will be available in the beginning of February, 2017. </u1></big>
+      <br> </br> </br> </br>
+	  
+	 
+	  
+	  <br> </br> </br> </br>
+	  
+	  
+<table
+ style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
+ border="0">
+  <tbody>
+    <tr>
+      <td style="width: 595px; background-color: rgb(255, 255, 255);"
+ border="0"><span class="Apple-style-span"
+ style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
+ class="Apple-style-span" style="">
  
  <hr style="width: 100%; height: 2px;"><br>
 
