--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -206,10 +206,10 @@ body {
 <br>
 <u1><big>
 Full details about accommodation will be available in the beginning of February, 2017. </u1></big>
-      <br> </br> </br> </br>
-	  
-	 
-	  
+      <br> </br> <br>
+	  <u1> We will make reservations for campus accommodation. You do not need to make any further arrangements as long as you want to stay on campus. </u1></br> </br> </br>
+	  <u1> You can always make your own reservation if you would like to stay in town. <u1>
+	 	  
 	  <br> </br> </br> </br>
 	  
 	  
