--- a/try.html
+++ b/try.html
@@ -157,10 +157,31 @@ body {
     </tr>
   </tbody>
 </table>
-	<span style="font-weight: bold;"></span><br>
+		<span style="font-weight: bold;"></span><br>
 
 <br>
 <hr style="margin-left: auto; margin-right: auto;">
+<table
+ style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
+ border="0">
+  <tbody>
+    <tr>
+	<td style="width: 595px; background-color: rgb(255, 255, 255);"
+ border="0"><span class="Apple-style-span"
+ style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
+ class="Apple-style-span" style="">
+ 
+ <h3><span style="color: rgb(255, 0, 0);">Drink Reception:</span><br>
+      </h3>
+     
+      <h3>There will be a drink reception for all participants on Monday 26 June on campus.</h3>
+      <h3><span style="color: rgb(255, 0, 0);">Dinner:</span><br>
+      </h3>
+	  <u1><big>The dinner will be at indivuduals' own expense (40 pounds per person).<br>
+      </big></u1> 
+      
+<h3> More information about all social events will be available soon. </h3>
+
 <table
  style="width: 955px; height: 263px; text-align: left; margin-left: auto; margin-right: auto;"
  border="0">
@@ -170,14 +191,6 @@ body {
  border="0"><span class="Apple-style-span"
  style="border-collapse: separate; color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; font-size: medium;"><span
  class="Apple-style-span" style="">
-	      <h3><span style="color: rgb(0, 0, 0);">There will be a drink reception for all participants on Monday 26 June and a dinner on Wednesday 28 June.</span><br>
-      </h3>
-	 
-	 <u1><big>The dinner will be at indivuduals' own expense (40 pounds per person).<br>
-      </big></u1> 
-	  <u1><big>The places of the reception and dinner will be announced here in the beginning of June.<br>
-      </big></u1>
-<br><br></br></br>
   <hr style="width: 100%; height: 2px;"><br>
 	<!--
 <span style="font-weight: bold;"></span><br>
