--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -200,7 +200,7 @@ body {
  border="0"><font style="color: rgb(255, 0, 0);" color="#990000"
  face="Verdana" size="4">
 	<p>&nbsp;</p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="sss.jpg">&nbsp;&nbsp;&nbsp; </p> <b>University of Sussex Campus</b></font><b
+<p>&nbsp;&nbsp;&nbsp; <img src="sss.jpg">&nbsp;&nbsp;&nbsp; </p> <b>University of Sussex Campus</b></font><b
  style="color: rgb(0, 0, 0);"><span lang="en-us"></span></b><font
  style="color: rgb(0, 0, 0);" face="Verdana" size="2"><br>
       <br>
