--- a/index-2.html
+++ b/index-2.html
@@ -285,10 +285,8 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
       <span lang="en-us"></span></div>
       </td>
     </tr>
-  </tbody>
+  </tbody><p>&nbsp;&nbsp;&nbsp; <img src="sea.jpg">&nbsp;&nbsp;&nbsp; </p><hr style="width: 100%; height: 2px;"><br>
 </table>
 
-
-<hr style="width: 100%; height: 2px;"><br>
 
 </html>
