--- a/index-2.html
+++ b/index-2.html
@@ -195,6 +195,8 @@ body {
  href="http://www.sussex.ac.uk/profiles/1242/"> --> <span
  style="text-decoration: none;">James Hirschfeld</span></a></font> (University of Sussex , Brighton, UK) <span style="font-weight: bold;"></span><br>
      <!-- <a target="_blank" href="http://www.sussex.ac.uk/profiles/323136/"> --> <span
+ style="text-decoration: none;"><a target="_blank"
+ href="https://ftmakroglu05.github.io/homepage/"> <span
  style="text-decoration: none;">Fatma Karaoglu</span></a> (University
 of Sussex, Brighton, UK)<br>
    </big></font><br>
