--- a/try.html
+++ b/try.html
@@ -177,7 +177,7 @@ body {
       <h3>There will be a drink reception for all participants on Monday 26 June on campus.</h3>
       <h3><span style="color: rgb(255, 0, 0);">Dinner:</span><br>
       </h3>
-	  <u1><big>The dinner will be at indivuduals' own expense (40 pounds per person).<br>
+	  <u1><big>The dinner will be at your own expense (40 pounds per person).<br>
       </big></u1> 
       
 <h3> More information about all social events will be available soon. </h3>
