--- a/registration.html
+++ b/registration.html
@@ -179,10 +179,10 @@ body {
 form.</a> <span class="Apple-converted-space"> </span></h3>
       
       <ul>
-        <li><big>The registration fee is 100 pounds. (Please note that registration fee does not cover accommodation.)</big></li>
+        <li><big>The registration fee is 100 pounds. (Please note that the registration fee does not cover accommodation.)</big></li>
       </ul>
       <ul>
-        <li><big>The registration fee includes welcome reception, breakfast, lunch, dinner, and coffee break.<br>
+        <li><big>The registration fee includes the welcome reception, breakfast, lunch, dinner, and coffee break.<br>
           </big></li>
       </ul>
       <ul>
