--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -197,7 +197,7 @@ Please name the files and emails as <b>Surname_Firstname_Abstract</b>.
 	  <br> </br> </br> </br>
 	  <h3><span style="color: rgb(255, 0, 0);">Deadline
 for
-sending us the abstract of talks: Monday 15 of May, 2017.</span><br>
+submitting the abstract of talks: Monday 15 of May, 2017.</span><br>
       </h3>
       
       <!--
