--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -210,7 +210,7 @@ body {
 <u1><big>
 Full details about accommodation will be available at the beginning of February, 2017. </u1></big>
       <br> </br> <br>
-	  <u1> We will make reservations for campus accommodation. You do not need to make any further arrangements as long as you want to stay on campus. </u1></br> </br> </br>
+	  <u1> We will make reservations for campus accommodation. You do not need to make any further arrangements if you want to stay on campus. </u1></br> </br> </br>
 	  <u1> You can always make your own reservation if you would like to stay in town. <u1>
 	 	  
 	  <br> </br> </br> </br>
