--- a/registration.html
+++ b/registration.html
@@ -186,7 +186,7 @@ form.</a> <span class="Apple-converted-space"> </span></h3>
           </big></li>
       </ul>
       <ul>
-        <li><big> To complete your registration you need to make your payments (registration fee + accommodation).</big></li>
+        <li><big> To complete your registration you need to make your payments (registration fee + campus accommodation).</big></li>
       </ul>
 <h3> More information about payment will be available soon. </h3>
 
