--- a/hotelinfo.html
+++ b/hotelinfo.html
@@ -268,7 +268,7 @@ Here are some suggestions:</u1></big>
 	  	  <ul>
         <li><big>   <span style="text-decoration: none;"><a target="_blank"
  href=" http://www.sussex.ac.uk/aboutus/findus/wheretostay/bandb"> <span
- style="text-decoration: none;">Bed and Breakfast/ Small hotles</span></a>   </big></li>
+ style="text-decoration: none;">Bed and Breakfast/ Small hotels</span></a>   </big></li>
       </ul>
 	  <ul>
         <li><big>    <span style="text-decoration: none;"><a target="_blank"
