--- a/registration.html
+++ b/registration.html
@@ -130,7 +130,7 @@ body {
       <small> </small></td>
       <td width="90"><small> </small>
       <div style="background-color: rgb(255, 102, 102);" align="center"><small><strong><a
- href="RegistrationForm.pdf">Registration</a></strong></small></div>
+ href="registration.html">Registration</a></strong></small></div>
       <small> </small></td>
       <td width="90"><small> </small>
       <div style="background-color: rgb(255, 255, 255);" align="center"><small><strong><a
