--- a/registration.html
+++ b/registration.html
@@ -175,7 +175,7 @@ body {
       </h3>
      
       <h3>Please fill in the <a
- href="stt">registration
+ href="RegistrationForm.pdf">registration
 form.</a> <span class="Apple-converted-space"> </span></h3>
       
       <ul>
