--- a/program.html
+++ b/program.html
@@ -186,7 +186,7 @@ body {
  face="Verdana" size="4"><b>School Program</b></font></h4>
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"> </font><big><span
  style="color: rgb(0, 0, 0);" lang="en-us"><font face="Verdana" size="2"><big><b>-
-      <i>Title of the lecture <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
+      <i>Arcs, Caps and Codes: Old results, New results, Generalizations. <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
 NOTES</big></a>--></i></b></big></font></span><br
  style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
