--- a/program.html
+++ b/program.html
@@ -212,7 +212,7 @@ NOTES</big></a>--></i></b></big></font></span><br
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big> <span
  lang="en-us"></span></big></font><br style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
- lang="en-us"> <b>-</b> <b><i>Title of the lecture <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
+ lang="en-us"> <b>-</b> <b><i>Combinatorial Applications of Finite Geometry <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
 NOTES</big></a> --> </i></b></big></font></span><br
  style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
