--- a/program.html
+++ b/program.html
@@ -222,7 +222,7 @@ NOTES</big></a> --> </i></b></big></font></span><br
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big> <span
  lang="en-us"></span></big></font><br style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
- lang="en-us"> <b>-</b> <b><i>Title of the lecture</i></b></span></big></font><br style="color: rgb(0, 0, 0);">
+ lang="en-us"> <b>-</b> <b><i>Computational Methods in Finite Geometry</i></b></span></big></font><br style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
  href="http://www.math.colostate.edu/~betten/"> <span
