--- a/program.html
+++ b/program.html
@@ -180,10 +180,10 @@ body {
  border="0">
       <h3
  style="background-color: rgb(255, 255, 255); margin-left: 40px;"><big
- style="font-weight: normal; font-family: Arial;">Scientific Program</big></h3>
+ style="font-weight: normal; font-family: Arial;">Scientific Programme</big></h3>
       <div style="margin-left: 40px;">
-      <h4><font style="color: rgb(0, 0, 0);" color="#990000"
- face="Verdana" size="4"><b>School Program</b></font></h4>
+     <!-- <h4><font style="color: rgb(0, 0, 0);" color="#990000"
+ face="Verdana" size="4"><b>School Program</b></font></h4> -->
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"> </font><big><span
  style="color: rgb(0, 0, 0);" lang="en-us"><font face="Verdana" size="2"><big><b>-
       <i>Arcs, Caps and Codes: Old results, New results, Generalizations. <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
@@ -253,7 +253,7 @@ NOTES</big></a> --> </i></b></big></font></span><br
         <tbody>
           <tr valign="bottom">
             <td colspan="8" align="center" valign="middle"><font
- size="3"><b><big> TENTATIVE SCHEDULE FOR&nbsp; SCHOOL</big></b></font></td>
+ size="3"><b><big> TENTATIVE SCHEDULE </big></b></font></td>
             
           </tr>
           <tr valign="bottom">
