--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -189,7 +189,7 @@ Please name the files and emails as <b>Surname_Firstname_Abstract</b>.
 	  <b style="color: rgb(0, 0, 0);"><font face="Verdana">Abstract template: <br>
 	  <a href="kja">
                 <img src="http://147.162.25.187/tex.png" alt="TeX document icon" />
-                template2017.tex
+                abst.tex
               </a>
 	  
       </font> 
