--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -187,9 +187,9 @@ Please name the files and emails as <b>Surname_Firstname_Abstract</b>.
       <br> </br> </br> </br>
 	  
 	  <b style="color: rgb(0, 0, 0);"><font face="Verdana">Abstract template: <br>
-	  <a href="kja">
+	  <a href="abst.tex">
                 <img src="http://147.162.25.187/tex.png" alt="TeX document icon" />
-                abst.tex
+                abstract.tex
               </a>
 	  
       </font> 
