--- a/program.html
+++ b/program.html
@@ -201,7 +201,7 @@ Ghent University, Ghent, Belgium</big></font><br
       <span style="color: rgb(0, 0, 0);" lang="en-us"><font
  face="Verdana" size="2"><big><b> </b> </big></font></span><font
  style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
- lang="en-us"> <b>-</b> <b><i>Title of the lecture <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
+ lang="en-us"> <b>-</b> <b><i>Eigenvalues and Root Systems in Finite Geometry <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
 NOTES</big></a>--></i></b></big></font></span><br
  style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
