--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ of Sussex, Brighton, UK)<br>
  size="2"><big> </big></font> </b><span style="font-family: Arial;"><font
  size="2"><big> <a target="_blank"
  href="https://cage.ugent.be/~jat/"> <span
- style="text-decoration: none;">Jef Thas</span></a></big></font></span><span
+ style="text-decoration: none;">Joseph Thas</span></a></big></font></span><span
  style="font-family: Arial;"><font size="2"><big>, </big></font> </span><font
  style="font-family: Arial;" size="2" face="Verdana"><big>Ghent University, Ghent, Belgium</big></font></big><br style="color: rgb(0, 0, 0);">
       <big style="color: rgb(0, 0, 0);"><font
