--- a/registration.html
+++ b/registration.html
@@ -138,7 +138,7 @@ body {
       <small> </small></td>
       <td width="100"><small> </small>
       <div style="background-color: rgb(255, 255, 255);" align="center"><small><strong><a
- href="lecturenotes.html"><small>Call for Short Talk</small><br>
+ href="lecturenotes.html"><small>Short Talks</small><br>
       </a></strong></small></div>
       <small> </small></td>
       <td width="90"><small> </small>
@@ -182,7 +182,7 @@ form.</a> <span class="Apple-converted-space"> </span></h3>
         <li><big>The registration fee is 100 pounds. (Please note that the registration fee does not cover accommodation.)</big></li>
       </ul>
       <ul>
-        <li><big>The registration fee includes the welcome reception, breakfast, lunch, dinner, and coffee break.<br>
+        <li><big>The registration fee includes the welcome reception and coffee break.<br>
           </big></li>
       </ul>
       <ul>
