--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body {
       <small> </small></td>
       <td width="100"><small> </small>
       <div style="background-color: rgb(255, 255, 255);" align="center"><small><strong><a
- href="lecturenotes.html"><small>Call for Short Talk</small><br>
+ href="lecturenotes.html"><small>Short Talks</small><br>
       </a></strong></small></div>
       <small> </small></td>
       <td width="90"><small> </small>
@@ -279,7 +279,7 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
       
 <dt><span style="font-weight: bold;">Contact<span
  class="Apple-converted-space">&nbsp;</span></span></dt>
-      <dt>Please email to fk74@sussex.ac.uk for all questions about the school. <br>
+      <dt>Please email to fingeo@sussex.ac.uk for all questions about the school. <br>
       </dt>
       </span></span><br class="Apple-interchange-newline">
       <div style="margin-left: 40px;"><br>
