--- a/lecturenotes.html
+++ b/lecturenotes.html
@@ -137,7 +137,7 @@ body {
       <small> </small></td>
       <td width="100"><small> </small>
       <div style="background-color: rgb(255, 102, 102);" align="center"><small><strong><a
- href="lecturenotes.html"><small>Call for Short Talk</small><br>
+ href="lecturenotes.html"><small>Short Talks</small><br>
       </a></strong></small></div>
       <small> </small></td>
       <td width="90"><small> </small>
@@ -197,7 +197,7 @@ Please name the files and emails as <b>Surname_Firstname_Abstract</b>.
 	  <br> </br> </br> </br>
 	  <h3><span style="color: rgb(255, 0, 0);">Deadline
 for
-submitting the abstract of talks: Monday 15 May, 2017.</span><br>
+submitting the abstract: Monday 15 May, 2017.</span><br>
       </h3>
       
       <!--
