--- a/program.html
+++ b/program.html
@@ -136,7 +136,7 @@ body {
       <small> </small></td>
       <td width="100"><small> </small>
       <div style="background-color: rgb(255, 255, 255);" align="center"><small><strong><a
- href="lecturenotes.html"><small>Call for Short Talk</small><br>
+ href="lecturenotes.html"><small>Short Talks</small><br>
       </a></strong></small></div>
       <small> </small></td>
       <td width="90"><small> </small>
@@ -184,16 +184,17 @@ body {
       <div style="margin-left: 40px;">
      <!-- <h4><font style="color: rgb(0, 0, 0);" color="#990000"
  face="Verdana" size="4"><b>School Program</b></font></h4> -->
-      <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"> </font><big><span
- style="color: rgb(0, 0, 0);" lang="en-us"><font face="Verdana" size="2"><big><b>-
-      <i>Arcs, Caps and Codes: Old results, New results, Generalizations. <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
-NOTES</big></a>--></i></b></big></font></span><br
- style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
  href="https://cage.ugent.be/~jat/"> <span
  style="text-decoration: none;">Jef Thas</span></a>, </b>
-Ghent University, Ghent, Belgium</big></font><br
+</big></font>
+	      <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"> </font><big><span
+ style="color: rgb(0, 0, 0);" lang="en-us"><font face="Verdana" size="2"><big><b>-
+      <h3>Arcs, Caps and Codes: Old results, New results, Generalizations. <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
+NOTES</big></a>--></h3></b></big></font></span><br
+ style="color: rgb(0, 0, 0);">
+      <br
  style="color: rgb(0, 0, 0);">
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big> </big></font><span
  style="color: rgb(0, 0, 0);" lang="en-us"></span><br
