--- a/program.html
+++ b/program.html
@@ -187,16 +187,14 @@ body {
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
  href="https://cage.ugent.be/~jat/"> <span
- style="text-decoration: none;">Jef Thas</span></a>, </b>
+ style="text-decoration: none;">Jef Thas</span></a> </b>
 </big></font>
 	      <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"> </font><big><span
- style="color: rgb(0, 0, 0);" lang="en-us"><font face="Verdana" size="2"><big><b>-
-      <h3>Arcs, Caps and Codes: Old results, New results, Generalizations. <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
-NOTES</big></a>--></h3></b></big></font></span><br
+ style="color: rgb(0, 0, 0);" lang="en-us"><font face="Verdana" size="2"><big><b>
+      <i>Arcs, Caps and Codes: Old results, New results, Generalizations. <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
+NOTES</big></a>--></i></b></big></font></span><br
  style="color: rgb(0, 0, 0);">
-      <br
- style="color: rgb(0, 0, 0);">
-      <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big> </big></font><span
+         <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big> </big></font><span
  style="color: rgb(0, 0, 0);" lang="en-us"></span><br
  style="color: rgb(0, 0, 0);">
       <span style="color: rgb(0, 0, 0);" lang="en-us"><font
