--- a/program.html
+++ b/program.html
@@ -187,8 +187,10 @@ body {
       <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
  href="https://cage.ugent.be/~jat/"> <span
- style="text-decoration: none;">Jef Thas</span></a> </b>
+ style="text-decoration: none;">Jef Thas</span></a>: </b>
 </big></font>
+	      <br
+ style="color: rgb(0, 0, 0);">
 	      <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"> </font><big><span
  style="color: rgb(0, 0, 0);" lang="en-us"><font face="Verdana" size="2"><big><b>
       <i>Arcs, Caps and Codes: Old results, New results, Generalizations. <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
