--- a/program.html
+++ b/program.html
@@ -196,18 +196,20 @@ body {
       <i>Arcs, Caps and Codes: Old results, New results, Generalizations. <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
 NOTES</big></a>--></i></b></big></font></span><br
  style="color: rgb(0, 0, 0);">
+	      
+	      <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big> </big></font><span
+ style="color: rgb(0, 0, 0);" lang="en-us"></span><br
+ style="color: rgb(0, 0, 0);">
+      <span style="color: rgb(0, 0, 0);" lang="en-us">
 	      <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
  lang="en-us"> </span><b> <a target="_blank"
  href="http://www-circa.mcs.st-andrews.ac.uk/~pjc/"> <span
  style="text-decoration: none;">Peter Cameron</span></a>:</b> </big></font><br
  style="color: rgb(0, 0, 0);">
-         <font style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big> </big></font><span
- style="color: rgb(0, 0, 0);" lang="en-us"></span><br
- style="color: rgb(0, 0, 0);">
-      <span style="color: rgb(0, 0, 0);" lang="en-us"><font
+         <font
  face="Verdana" size="2"><big><b> </b> </big></font></span><font
  style="color: rgb(0, 0, 0);" face="Verdana" size="2"><big><span
- lang="en-us"> <b>-</b> <b><i>Eigenvalues and Root Systems in Finite Geometry <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
+ lang="en-us"> <b></b> <b><i>Eigenvalues and Root Systems in Finite Geometry <!--<a href="ln/BOUNDING.COHOMOLOGY.pdf"><big>LECTURE
 NOTES</big></a>--></i></b></big></font></span><br
  style="color: rgb(0, 0, 0);">
       
