--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ University of St Andrews, St Andrews, United Kingdom</big></font></big><big
  style="font-family: Arial;"> <a target="_blank"
  href="https://mat-web.upc.edu/people/simeon.michael.ball/"> <span
  style="text-decoration: none;">Simeon Ball</span></a>,</span><span
- style="font-family: Arial;">  Universitat Politècnica de Catalunya, Barcelona, Spain </span><span
+ style="font-family: Arial;">  Polytechnic University of Catalonia, Barcelona, Spain </span><span
  style="font-family: Arial;"></span></big></font><br
  style="color: rgb(0, 0, 0);">
  
