--- a/registration.html
+++ b/registration.html
@@ -176,7 +176,7 @@ body {
      
       <h3>Please fill in the <a
  href="RegistrationForm.pdf"><span style="color: rgb(0, 0, 255);">registration
-form.</a> <span class="Apple-converted-space"> </span></h3>
+form.</a> <span class="Apple-converted-space"> </span> and send it to fingeo@sussex.ac.uk</h3>
       
       <ul>
         <li><big>The registration fee is 100 pounds. (Please note that the registration fee does not cover accommodation.)</big></li>
